# shoper-semi

./: .env  Cargo.toml  README.md  Rocket.toml  diesel.toml
migrations/2025-01-16-120235_product/: up.sql
migrations/2025-01-20-135723_techno/: up.sql
migrations/2025-01-25-141428_product_images/: down.sql  up.sql
migrations/2025-02-01-140311_users_info/: up.sql
migrations/2025-02-03-165813_user_token/: up.sql
src/: lib.rs  main.rs  schema.rs
src/autorization/: log.rs  mod.rs  routes_user.rs  sentinel.rs  token.rs  user.rs
src/autorization/request_guard/: guard_user.rs  mod.rs
src/autorization/scraper/: mod.rs  scrap_me.rs
src/database/: conn.rs  mod.rs  sorting.rs
src/database/insert_table/: mod.rs
src/routes/: catcher.rs  home_page.rs  mod.rs  product_routes.rs  rocket_impl.rs
src/routes/shopping_cart/: cart.rs
static/js/: admin.js  category.js  found.js  home_page.js  not_found.js  product.js
static/style/: admin.css  categor.css  home_page.css  product.css
templaiting/: admin.html.hbs  categories.html.hbs  clothing.html.hbs  electro.html.hbs  index.html.hbs  index1.html.hbs  search_page.html.hbs  serch_not_found.html.hbs  user_profile.html.hbs
templates/: home_page.html
